--- a/tryout_env.ipynb
+++ b/tryout_env.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,9 @@
       "CPU times: user 201 ms, sys: 2.59 ms, total: 203 ms\n",
       "Wall time: 203 ms\n",
       "CPU times: user 5.72 s, sys: 20.5 ms, total: 5.74 s\n",
-      "Wall time: 5.75 s\n"
+      "Wall time: 5.75 s\n",
+      "CPU times: user 3min 50s, sys: 1.06 s, total: 3min 51s\n",
+      "Wall time: 3min 51s\n"
      ]
     }
    ],
